--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "homepage": "https://raduavramescu.github.io/nps-survey",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "survey-react": "^1.8.13",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "^4.0.1",
+    "survey-react": "^1.8.20",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
